# FindTheMag2

./: .gitignore  CHANGELOG  config.py  dev_notes.txt  main.py  pyproject.toml  readme.md  requirements.txt  updates.txt  utility.py
.github/workflows/: python-app.yml
libs/: .gitignore  .travis.yml  Pipfile  README.md  example.py  setup.py  tox.ini
libs/pyboinc/: __init__.py  _constants.py  _parse.py  _raw_client.py  _tag.py  rpc_client.py
libs/scripts/: h_to_py.py  protocol_to_tag.py
tests/: gridcoinresearch.conf  main_tests.py
tests/boinc/: boinc_tests.py
tests/boinc_stats/: job_log_escatter11.fullerton.edu_nfs.txt  job_log_sech.me_boinc_Amicable.txt  job_log_www.rechenkraft.net_yoyo.txt  job_log_www.worldcommunitygrid.org.txt  statistics_boinc.bakerlab.org_rosetta.xml  statistics_boinc.multi-pool.info_latinsquares.xml  statistics_einstein.phys.uwm.edu.xml  statistics_escatter11.fullerton.edu_nfs.xml  statistics_gene.disi.unitn.it_test.xml  statistics_milkyway.cs.rpi.edu_milkyway.xml  statistics_sech.me_boinc_Amicable.xml  statistics_srbase.my-firewall.org_sr5.xml  statistics_universeathome.pl_universe.xml  statistics_www.gpugrid.net.xml  statistics_www.rechenkraft.net_yoyo.xml  statistics_www.sidock.si_sidock.xml  statistics_www.worldcommunitygrid.org.xml
tests/boinc_stats_2/: job_log_escatter11.fullerton.edu_nfs.txt  job_log_sech.me_boinc_Amicable.txt  job_log_www.rechenkraft.net_yoyo.txt  job_log_www.worldcommunitygrid.org.txt  statistics_boinc.bakerlab.org_rosetta.xml  statistics_boinc.multi-pool.info_latinsquares.xml  statistics_www.gpugrid.net.xml  (+10 more)
(+6 files in other folders)
